--- a/readme
+++ b/readme
@@ -18,3 +18,6 @@ The program begins with **HTML**, then moves into **CSS**, **JavaScript**, front
 | Day 2 | Sunday, 16/11/2025 | HTML | Paragraph (`<p>`), Headings (`<h1>`–`<h6>`), Ordered List (`<ol>`), Unordered List (`<ul>`), Image (`<img>`), Anchor (`<a>`) |
 | Day 3 | Saturday, 22/11/2025 | HTML | Table, Form, Anchor Tag
 | Day 4 | Sunday,   23/11/2025 | HTML | Block & Inline Element (Div tag) Style Attribute
+| Day 5 | Saturday, 29/11/2025 | HTML | Semantic & Non  Semantic (div ,span , font , text property)
+| Day 6 | Sunday,   30/11/2025 | CSS  | Internal styling Property (block , inline , gladia.io hero section)
+
