--- a/readme
+++ b/readme
@@ -20,4 +20,6 @@ The program begins with **HTML**, then moves into **CSS**, **JavaScript**, front
 | Day 4 | Sunday,   23/11/2025 | HTML | Block & Inline Element (Div tag) Style Attribute
 | Day 5 | Saturday, 29/11/2025 | HTML | Semantic & Non  Semantic (div ,span , font , text property)
 | Day 6 | Sunday,   30/11/2025 | CSS  | Internal styling Property (block , inline , gladia.io hero section)
+| Day 7 | Saturday, 06/12/2025 | CSS  | flex & Navbar (gladia.io)
+
 
