--- a/readme
+++ b/readme
@@ -21,5 +21,7 @@ The program begins with **HTML**, then moves into **CSS**, **JavaScript**, front
 | Day 5 | Saturday, 29/11/2025 | HTML | Semantic & Non  Semantic (div ,span , font , text property)
 | Day 6 | Sunday,   30/11/2025 | CSS  | Internal styling Property (block , inline , gladia.io hero section)
 | Day 7 | Saturday, 06/12/2025 | CSS  | flex & Navbar (gladia.io)
+| Day 8 | Sunday,   07/12/2025 | CSS  | Github and Three cards (gladia.io)
+
 
 
