--- a/readme
+++ b/readme
@@ -22,6 +22,8 @@ The program begins with **HTML**, then moves into **CSS**, **JavaScript**, front
 | Day 6 | Sunday,   30/11/2025 | CSS  | Internal styling Property (block , inline , gladia.io hero section)
 | Day 7 | Saturday, 06/12/2025 | CSS  | flex & Navbar (gladia.io)
 | Day 8 | Sunday,   07/12/2025 | CSS  | Github and Three cards (gladia.io)
+| Day 9 | Saturday, 13/12/2025 | CSS  | Position (Relative & Absolute)
+
 
 
 
