--- a/readme
+++ b/readme
@@ -23,6 +23,8 @@ The program begins with **HTML**, then moves into **CSS**, **JavaScript**, front
 | Day 7 | Saturday, 06/12/2025 | CSS  | flex & Navbar (gladia.io)
 | Day 8 | Sunday,   07/12/2025 | CSS  | Github and Three cards (gladia.io)
 | Day 9 | Saturday, 13/12/2025 | CSS  | Position (Relative & Absolute)
+| Day 10| Sunday , 14/12/2025  | CSS  | Overflow & Figma pixel perfect to (HTML & CSS)
+
 
 
 
