--- a/readme
+++ b/readme
@@ -24,6 +24,8 @@ The program begins with **HTML**, then moves into **CSS**, **JavaScript**, front
 | Day 8 | Sunday,   07/12/2025 | CSS  | Github and Three cards (gladia.io)
 | Day 9 | Saturday, 13/12/2025 | CSS  | Position (Relative & Absolute)
 | Day 10| Sunday , 14/12/2025  | CSS  | Overflow & Figma pixel perfect to (HTML & CSS)
+| Day 11| Saturday ,20/12/2025  | CSS  | max , min width , combinator , float
+
 
 
 
