--- a/readme
+++ b/readme
@@ -25,6 +25,10 @@ The program begins with **HTML**, then moves into **CSS**, **JavaScript**, front
 | Day 9 | Saturday, 13/12/2025 | CSS  | Position (Relative & Absolute)
 | Day 10| Sunday , 14/12/2025  | CSS  | Overflow & Figma pixel perfect to (HTML & CSS)
 | Day 11| Saturday ,20/12/2025  | CSS  | max , min width , combinator , float
+| Day 12| Sunday , 21/12/2025  | Off day
+| Day 12| Saturday , 27/12/2025  | Background image , opacity , hover
+
+
 
 
 
