--- a/readme
+++ b/readme
@@ -27,6 +27,8 @@ The program begins with **HTML**, then moves into **CSS**, **JavaScript**, front
 | Day 11| Saturday ,20/12/2025  | CSS  | max , min width , combinator , float
 | Day 12| Sunday , 21/12/2025  | Off day
 | Day 12| Saturday , 27/12/2025  | Background image , opacity , hover
+| Day 12| Sunday ,  28/12/2025  | HTML TEST
+
 
 
 
