--- a/readme
+++ b/readme
@@ -28,6 +28,8 @@ The program begins with **HTML**, then moves into **CSS**, **JavaScript**, front
 | Day 12| Sunday , 21/12/2025  | Off day
 | Day 12| Saturday , 27/12/2025  | Background image , opacity , hover
 | Day 12| Sunday ,  28/12/2025  | HTML TEST
+| Day 12| Sunday ,  03/01/2026  | Pesudo element , attributes , Grid , Form
+
 
 
 
