--- a/readme
+++ b/readme
@@ -1,36 +1,30 @@
-# 📘 Web & Mobile Development — Batch No. 04 (1 Year Course)
+# Web-and-Mobile-Development-Batch-No-04
 
-## 📅 Schedule
-- **Days:** Saturday & Sunday  
-- **Time:** 12:00 PM – 2:00 PM  
-- **Duration:** 1 Year  
-
-This repository contains **weekly class outlines, notes, and code examples** for the Web & Mobile Development course.
-
-The program starts with **HTML**, moves into **CSS**, then progresses to **JavaScript**, frontend frameworks, backend development, databases, and **mobile app development**.
+## Schedule
+📅 **Saturday & Sunday**  
+⏰ **12:00 PM – 2:00 PM**  
+⏳ **Duration:** 1 Year  
 
 ---
 
-## 🗓️ Weekly Progress
+### Web & Mobile Development
 
-| Day | Date | Class Focus | Topics Covered |
-|-----|------|-------------|----------------|
-| Day 0 | Sunday, 08/11/2025 | Orientation | Introduction to Web & Mobile Development |
-| Day 1 | Saturday, 15/11/2025 | VS Code | Installing VS Code, Exploring VS Code Interface, Live Server Setup |
-| Day 2 | Sunday, 16/11/2025 | HTML | Paragraph (`<p>`), Headings (`<h1>`–`<h6>`), Ordered List (`<ol>`), Unordered List (`<ul>`), Image (`<img>`), Anchor (`<a>`) |
-| Day 3 | Saturday, 22/11/2025 | HTML | Tables, Forms, Anchor Tag |
-| Day 4 | Sunday, 23/11/2025 | HTML | Block & Inline Elements, `div` Tag, Style Attribute |
-| Day 5 | Saturday, 29/11/2025 | HTML | Semantic & Non-Semantic Elements (`div`, `span`, `font`), Text Properties |
-| Day 6 | Sunday, 30/11/2025 | CSS | Internal Styling, Display Properties (Block & Inline), Gladia.io Hero Section |
-| Day 7 | Saturday, 06/12/2025 | CSS | Flexbox & Navbar (Gladia.io) |
-| Day 8 | Sunday, 07/12/2025 | CSS | GitHub Introduction, Three Cards Layout (Gladia.io) |
-| Day 9 | Saturday, 13/12/2025 | CSS | Positioning (Relative & Absolute) |
+| Day | Date | Class Focus | Completed Sections |
+|-----|------|------------|--------------------|
+| Day 00 | Sunday, 08/11/2025 | Orientation | Introduction to Web & Mobile Development |
+| Day 01 | Saturday, 15/11/2025 | VS Code | VS Code Installation, Interface Overview, Live Server Setup |
+| Day 02 | Sunday, 16/11/2025 | HTML | Paragraph, Headings (`h1–h6`), Ordered & Unordered Lists, Image, Anchor Tag |
+| Day 03 | Saturday, 22/11/2025 | HTML | Tables, Forms, Anchor Tag |
+| Day 04 | Sunday, 23/11/2025 | HTML | Block & Inline Elements, `div`, Style Attribute |
+| Day 05 | Saturday, 29/11/2025 | HTML | Semantic & Non-Semantic Elements (`div`, `span`, `font`), Text Properties |
+| Day 06 | Sunday, 30/11/2025 | CSS | Internal Styling, Display Properties, Gladia.io Hero Section |
+| Day 07 | Saturday, 06/12/2025 | CSS | Flexbox, Navbar (Gladia.io) |
+| Day 08 | Sunday, 07/12/2025 | CSS | GitHub Introduction, Three Cards Layout |
+| Day 09 | Saturday, 13/12/2025 | CSS | Positioning (Relative & Absolute) |
 | Day 10 | Sunday, 14/12/2025 | CSS | Overflow, Figma Pixel-Perfect Design to HTML & CSS |
 | Day 11 | Saturday, 20/12/2025 | CSS | Max & Min Width, Combinators, Float |
-| Day 12 | Sunday, 21/12/2025 | — | Off Day |
+| Day 12 | Sunday, 21/12/2025 | Off Day | — |
 | Day 13 | Saturday, 27/12/2025 | CSS | Background Image, Opacity, Hover Effects |
-| Day 14 | Sunday, 28/12/2025 | Assessment | HTML Test |
-| Day 15 | Saturday, 03/01/2026 | CSS | Pseudo-elements, Attributes, CSS Grid, Forms |
-
----
+| Day 14 | Sunday, 28/12/2025 | Test | HTML Test |
+| Day 15 | Saturday, 03/01/2026 | CSS | Pseudo-elements, Attribute Selectors, CSS Grid, Forms |
 
