--- a/readme
+++ b/readme
@@ -28,3 +28,20 @@
 | Day 14 | Sunday, 28/12/2025 | Test | HTML Test |
 | Day 15 | Saturday, 03/01/2026 | CSS | Pseudo-elements, Attribute Selectors, CSS Grid, Forms |
 
+---
+
+### 📌 Course Roadmap (Upcoming)
+- JavaScript (Basics → Advanced)
+- Git & GitHub
+- Bootstrap & Tailwind CSS
+- React.js & Next.js
+- Firebase Authentication & Hosting
+- Backend Development (Node.js, Express.js)
+- MongoDB
+- REST APIs
+- Mobile App Development (React Native / Expo)
+- Final Project & Hackathon
+
+---
+
+### 📂 Repository Structure
